--- a/css/main.pcss
+++ b/css/main.pcss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   box-sizing: border-box;
 }
@@ -276,3 +280,21 @@ input.params__field:focus {
   cursor: ew-resize;
   color: var(--gray600);
 }
+
+.dialog-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .dialog {
+  min-width: 500px;
+  min-height: 300px;
+  background: var(--gray600);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+} */
