--- a/css/main.pcss
+++ b/css/main.pcss
@@ -42,9 +42,6 @@ body {
 .editor {
   display: flex;
   flex-direction: column;
-  flex: 3;
-  width: 500px;
-  border-right: 2px solid var(--gray700);
 }
 
 .editor__tabs {
@@ -96,7 +93,13 @@ body {
 
 .network {
   width: 100%;
+  height: calc(100% - 30px);
+}
+
+.network__canvas {
+  width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 /**** CODE ****/
@@ -137,10 +140,6 @@ body {
 }
 
 .params {
-  flex: 2;
-  border-top: 2px solid var(--gray700);
-
-  border-right: 2px solid var(--gray700);
 }
 
 .params__empty {
