Make sure custom node shows up.

--- a/css/main.pcss
+++ b/css/main.pcss
@@ -92,6 +92,7 @@ body {
 /**** NETWORK ****/
 
 .network {
+  border-top: 4px solid var(--gray800);
   width: 100%;
   height: calc(100% - 30px);
 }
