Change default position of splitter.

--- a/src/ui/css/main.css
+++ b/src/ui/css/main.css
@@ -18,8 +18,8 @@
   --gray700: #4a5568;
   --gray800: #2d3748;
   --gray900: #1a202c;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", monospace;
-  --splitter: 80%;
+  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono', monospace;
+  --splitter: 70%;
 }
 
 html,
