--- a/src/ui/css/main.css
+++ b/src/ui/css/main.css
@@ -339,3 +339,59 @@ input.params__field:focus {
 
   border-radius: 8px;
 }
+
+/**** MODAL ****/
+
+.modal-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+}
+
+.modal-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal {
+  background-color: #1e1e1e;
+  border-radius: 12px;
+  border: 1px solid #555;
+  position: relative;
+  padding: 0;
+  width: 90vw;
+  height: 90vh;
+  max-width: 1100px;
+  max-height: 1000px;
+  overflow: hidden;
+  flex-direction: column;
+  display: flex;
+}
+
+.modal-close {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  height: 24px;
+  width: 24px;
+  padding: 0 4px;
+  border-radius: 4px;
+}
+
+.modal-close:hover {
+  background-color: rgba(255, 255, 255, 0.01);
+}
+
+.modal-content {
+  display: flex;
+}
