Upgrade a bunch of dependencies
There were some issues with building vite/tailwind and all required dependencies, they should be fixed now:
- Vite has index.html in the root, and uses that
- Tailwind is upgrade to v4, we needed to get all the paths correct
- onnxruntime-web needed the newer version of its .wasm dependency to match the runtime version.

--- a/src/ui/css/main.css
+++ b/src/ui/css/main.css
@@ -1,8 +1,4 @@
-/* purgecss start ignore */
-@tailwind base;
-@tailwind components;
-/* purgecss end ignore */
-@tailwind utilities;
+@import 'tailwindcss';
 
 * {
   box-sizing: border-box;
